tests/baselines/reference/annotationDeclarationError7.errors.txt
tests/cases/conformance/annotations/annotationDeclarationError7.ets(5,1): error TS28031: Annotation cannot be exported as default.


==== tests/cases/conformance/annotations/annotationDeclarationError7.ets (1 errors) ====
    @interface Anno {
        a: number
    }
    
    export default Anno;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS28031: Annotation cannot be exported as default.